# Production-Ready-EKS-Cluster

./: .pre-commit-config.yaml  README.md  workflow.yaml  workflow2.yaml
.github/workflows/: destroy.yaml  terraform.yaml  terraform2.yaml  workflow.yaml  workflow2.yaml
ISD-DS-AI-Team-main/SOC-Analyst-Assistant/Backend/: Cargo.toml  build.rs
ISD-DS-AI-Team-main/SOC-Analyst-Assistant/Backend/data/: sampleEmails.json  virustotal.json
ISD-DS-AI-Team-main/SOC-Analyst-Assistant/Backend/src/: analysis.rs  email_msg.rs  index.html  iris.rs  logger.rs  response.json  virustotal.rs
fluxcd/clusters/training_eks/: 00-crds.yaml  01-base.yaml  02-cert-manager.yaml  99-hextris.yaml
fluxcd/components/base/: 02-aws-csi.yaml  03-aws-lb-controller.yaml  04-metrics-server.yaml  05-nginx-ingress-controller.yaml  kustomization.yaml
fluxcd/components/cert-manager/: 00-cert-manager.yaml  02-certificate.yaml
fluxcd/components/hextris/: 00-hextris.yaml  01-hextris-ingress.yaml  kustomization.yaml
main-team/SOC-Analyst-Assistant/: .gitignore  docker-compose.yml
main-team/SOC-Analyst-Assistant/Backend/: Dockerfile  README.md
main-team/SOC-Analyst-Assistant/Frontend/: .env  (+3 more)
oidc/: eks-custom-policy.json  trust-policy.json
terraform/aws-infra/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/eks/: .tflint.hcl  eks.tfvars  init.tf  keys.tf  locals.tf  main.tf  outputs.tf  policies.tf  roles.tf  variables.tf  version.tf
terraform/vpc/: .gitignore  init.tf  locals.tf  main.tf  outputs.tf  terraform.auto.tfvars  variables.tf  version.tf
(+33 files in other folders)
