[package]
name = "saa-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4.0"
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
actix-multipart = "0.7.2"
tempfile = "3.14.0"
lazy_static = "1.5.0"
sanitize-filename = "0.6.0"
mime = "0.3.17"
mime_guess = "2.0.5"
lopdf = "0.34.0"
pdf = "0.9.0"
pdf-extract = "0.7.11"

regex = "1.7"
msg_parser = { version = "0.1.1"}
text-reader = "0.2.1"
zip = "0.6.6"
infer = "0.16.0"
serde_json = "1.0.134"
url = "2.5.4"
percent-encoding = "2.3.1"
hex = "0.4.3"
mutex = "0.1.0"
cors = "0.1.0"
color = "0.2.2"
log = "0.4.25"
env_logger = "0.11.6"
chrono = "0.4.39"
sha2 = "0.10.8"
base64 = "0.22.1"
